Try to avoid wrapping weather text
"overcast clouds" for example wraps to 2 lines on the pi display.

--- a/static/main.css
+++ b/static/main.css
@@ -81,7 +81,8 @@ body {
   padding: 0;
   margin: 0;
   font-size: 18px;
-  width: 35%;
+  line-height: 1.1;
+  width: 40%;
 }
 
 .hourly-img {
